<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_logo" android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_login_register"
            android:text="@string/login"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/link_blue"
            android:text="@string/no_account_yet_create_one"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbLogin"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>