<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignoutQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_really_want_to_sign_out"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_register"
        android:text="@string/sign_out"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tvSignoutQuest"
        android:paddingRight="70dp"
        android:paddingLeft="70dp"
        android:textSize="13sp"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbSignout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/tvSignoutWait"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:layout_below="@+id/pbSignout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>