<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:id="@+id/etDialogConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvDialogConfirm"
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvDialogCancel"
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</LinearLayout>