<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvProfilePosts"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="17sp"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvProfileFollwers"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="17sp"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvProfileFollowing"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="17sp"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvProfileButtonEdit"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:background="@drawable/tv_edit_profile"
        android:text="@string/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>